worktree-io-patch/tests/snapshots/snapshot_tests__config_toml_path_suffix.snap
---
source: tests/snapshot_tests.rs
assertion_line: 49
expression: suffix.to_str().unwrap()
---
.config/worktree/config.toml
