worktree-io-patch/tests/snapshots/snapshot_tests__workspaces_toml_path_suffix.snap
---
source: tests/snapshot_tests.rs
assertion_line: 62
expression: suffix.to_str().unwrap()
---
.config/worktree/workspaces.toml
